--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "test": "jest"
   },
   "dependencies": {
+    "@nuxtjs/apollo": "^4.0.1-rc.4",
     "core-js": "^3.6.5",
+    "graphql-tag": "^2.11.0",
     "nuxt": "^2.14.6"
   },
   "devDependencies": {
