--- a/package.json
+++ b/package.json
@@ -12,10 +12,13 @@
     "test": "jest"
   },
   "dependencies": {
+    "@nuxt/content": "^1.10.0",
     "@nuxtjs/apollo": "^4.0.1-rc.4",
     "core-js": "^3.6.5",
     "graphql-tag": "^2.11.0",
-    "nuxt": "^2.14.6"
+    "js-yaml": "^3.14.0",
+    "nuxt": "^2.14.6",
+    "prism-themes": "^1.5.0"
   },
   "devDependencies": {
     "@nuxtjs/eslint-config": "^3.1.0",
