--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@nuxtjs/apollo": "^4.0.1-rc.4",
     "core-js": "^3.6.5",
     "graphql-tag": "^2.11.0",
+    "is-cidr": "^4.0.2",
+    "is-ip": "^3.1.0",
     "js-yaml": "^3.14.0",
     "nuxt": "^2.14.6",
     "prism-themes": "^1.5.0"
